# rust-todo

./: .env  Cargo.toml  docker-compose.yml  flake.nix
migrations/2024-06-11-003801_create_users/: up.sql
migrations/2024-06-11-003807_create_todos/: up.sql
migrations/2024-06-15-211444_update_todos/: down.sql  up.sql
src/: main.rs  schema.rs
src/db/: connection.rs  mod.rs  models.rs  operations.rs
src/services/: services.rs
src/utils/: utils.rs
