[package]
name = "todo"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6"
actix-web = { version = "4", features = ["macros"] }
http = "1.1.0"
actix-web-validator = "5.0.1"
validator = { version = "0.18", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
diesel = { version = "2.1.1", features = [
    "postgres",
    "r2d2",
    "chrono",
] }
dotenv = "0.15"
tracing = "0.1.40"
tracing-subscriber = "0.3"
tracing-actix-web = "0.7.11"
chrono = { version = "0.4", features = ["serde"] }
r2d2 = "0.8.10"
diesel-async = { version = "0.4.1", features = ["postgres", "deadpool"] }
#deadpool = { version = "0.12.1", features = ["rt_tokio_1"] }
#deadpool-diesel = "0.6.1"
#deadpool-r2d2 = "0.4.1"
#r2d2_postgres = "0.18.1"